score display font size, overflow-y on playbyplay, padding issue on righthand score display

--- a/react_app/src/components/Scoreboard/Scoreboard.scss
+++ b/react_app/src/components/Scoreboard/Scoreboard.scss
@@ -20,10 +20,11 @@
 		padding-right: 20px;
 		h1, h2{
 			padding-left: 30px;
+			padding-right: 0px
 		}
 	}
 	h1{
-		font-size: 60px;
+		font-size: 90px;
 		margin: 0px;
 		padding-right: 30px;
 	}
